# rust-api-service-example

./: .gitignore  Cargo.toml  readme.md
Pokemons/: Cargo.toml
Pokemons/src/: lib.rs  model.rs
Pokemons/src/features/: FindPokemonDetailsFeature.rs  mod.rs
Pokemons/src/jobs/: BuildPokemonDescription.rs  GetPokemonDetailsFromWebApi.rs  mod.rs
WebUtils/: Cargo.toml
WebUtils/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
