[package]
name = "Pokemons"
version = "0.1.0"
authors = ["Haiaty Varotto <haiaty.varotto@nubilaria.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
WebUtils = { path =  "../WebUtils"}
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
anyhow="1.0.31"