[package]
name = "WebUtils"
version = "0.1.0"
authors = ["Haiaty Varotto <haiaty.varotto@nubilaria.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
hyper-tls = "0.4.1"
serde_json = "1.0"
bytes = "0.5.5"
anyhow="1.0.31"
regex = "1"