[package]
name = "main"
version = "0.1.0"
authors = ["haiaty <varottohaiaty@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
hyper-tls = "0.4.1"
anyhow="1.0.31"
serde_json = "1.0"
bytes = "0.5.5"
